--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,7 +1,9 @@
+<!-- Custom css -->
+<link rel="stylesheet" href="/small.css" />
+
+
 <footer>
-    <h1>Lorem ipsum color</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Deserunt expedita eos ex, quasi possimus vel voluptate saepe 
-        amet eum minima? Maiores beatae quos veniam tempora numquam 
-        nihil libero sequi officiis!</p>
+    <p class="copyright">
+      &copy; <span id="year">2023</span> | Cristian Moisés De La Hoz Escorcia |
+    </p>
 </footer>
