--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First website</title>
+    <title>Home</title>
     <%-include('partials/head') %>
 </head>
 <body>
     <%-include('partials/navigation') %>
     <h1>Hello World</h1>
+
     <%-include('partials/footer') %>
 </body>
 </html>
