--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,2 +1,4 @@
 <!-- Custom css -->
-<link rel="stylesheet" href="/main.css">
+<link rel="stylesheet" href="/small.css" />
+<link rel="stylesheet" href="/medium.css" />
+<link rel="stylesheet" href="/large.css" />
