--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,13 +1,32 @@
-<nav>
-    <ul>
-        <li>
-            <a href="/">Home</a>
-        </li>
-        <li>
-            <a href="/contact">Contact</a>
-        </li>
-        <li>
-            <a href="/about">About</a>
-        </li>
-    </ul>
-</nav>
+<!-- Custom css -->
+<link rel="stylesheet" href="/small.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+<header>
+    <h1>Stratified Sampling</h1>
+    <h2>Concepts and design of sampling plans</h2>
+   <nav class="topnav" id="myTopnav">
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/importinfo">Basic information</a>
+    <a href="/importdata">Statistical summary</a>
+    <a href="/contact">Sampling plan</a>
+     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+       <span class="material-symbols-outlined"></span>
+     <i class="fa fa-bars"></i>
+     </a>
+  </nav>
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+    </script>
+ </header>
+ 
+
