--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -8,7 +8,17 @@
 </head>
 <body>
     <%-include('partials/navigation') %>
-    <h1>About</h1>
+    <h4>Developmental features.</h4>
+    <p>In this development, you will be able to obtain a stratified sampling plan from the information of the study population which must be entered in an Excel file that must have the following structure.</p>
+    <center><img src="/exel_img.png" alt="sampling ecuation"></center>
+    <ol>
+    <ul>CODE is the sample code.</ul>
+    <ul>DISTRICT is a geographic sub-area or district</ul>
+    <ul>BUSINESS_NAME is the name of the building where the sample is taken, such as School, Factory, Neighborhood, Block, etc.</ul>
+    <ul>STATE is the state, department, or province.</ul>
+    <ul>CITY is the city or town where the building is located.</ul>
+    <ul>POPULATION is the size of the population or number of people, animals, or objects to be sampled.</ul>
+    </ol>
     <%-include('partials/footer') %>
 </body>
 </html>
