--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,15 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <%-include('partials/head') %>
-</head>
-<body>
+  </head>
+  <body>
     <%-include('partials/navigation') %>
-    <h1>Hello World</h1>
+    <h4>Stratified sampling</h4>
+    <p>
+      In statistics, stratified sampling is a method of sampling from a
+      population which can be partitioned into subpopulations.<br />
 
+      <br />In statistical surveys, when subpopulations within an overall
+      population vary, it could be advantageous to sample each subpopulation
+      (stratum) independently.<br />
+
+      <br />Stratification is the process of dividing members of the population
+      into homogeneous subgroups before sampling. The strata should define a
+      partition of the population. That is, it should be collectively exhaustive
+      and mutually exclusive: every element in the population must be assigned
+      to one and only one stratum. Then simple random sampling is applied within
+      each stratum. The objective is to improve the precision of the sample by
+      reducing sampling error. It can produce a weighted mean that has less
+      variability than the arithmetic mean of a simple random sample of the
+      population.<br />
+
+      <br />In computational statistics, stratified sampling is a method of
+      variance reduction when Monte Carlo methods are used to estimate
+      population statistics from a known population.[1]
+    </p>
+
+    <h4>Stratified sampling strategies</h4>
+
+    <p>
+      1. <b><i>Proportionate allocation</i></b> uses a sampling fraction in each
+      of the strata that are proportional to that of the total population. For
+      instance, if the population consists of <i>n</i> total individuals,
+      <i>m</i> of which are male and <i>f</i> female (and where <i>m</i> +
+      <i>f</i> = <i>n</i>), then the relative size of the two samples (<i
+        >x<sub>1</sub></i
+      >
+      = <i>m/n</i> males, <i>x<sub>2</sub></i> = <i>f/n</i> females) should
+      reflect this proportion.<br /><br />
+
+      2. <b><i>Optimum allocation</i></b> (or
+      <i>disproportionate allocation</i>) - The sampling fraction of each
+      stratum is proportionate to both the proportion (as above) and the
+      standard deviation of the distribution of the variable. Larger samples are
+      taken in the strata with the greatest variability to generate the least
+      possible overall sampling variance.<br /><br />
+
+      A real-world example of using stratified sampling would be for a political
+      Statistical survey. If the respondents needed to reflect the diversity of
+      the population, the researcher would specifically seek to include
+      participants of various minority groups such as race or religion, based on
+      their proportionality to the total population as mentioned above. A
+      stratified survey could thus claim to be more representative of the
+      population than a survey of simple random sampling or systematic sampling
+    </p>
+    <h4>Advantages</h4>
+    <p>
+      The reasons to use stratified sampling rather than simple random sampling
+      include<br /><br />
+
+      If measurements within strata have a lower standard deviation (as compared
+      to the overall standard deviation in the population), stratification gives
+      a smaller error in estimation.<br /><br />
+      For many applications, measurements become more manageable and/or cheaper
+      when the population is grouped into strata.<br /><br />
+      When it is desirable to have estimates of the population parameters for
+      groups within the population - stratified sampling verifies we have enough
+      samples from the strata of interest.<br /><br />
+      If the population density varies greatly within a region, stratified
+      sampling will ensure that estimates can be made with equal accuracy in
+      different parts of the region, and that comparisons of sub-regions can be
+      made with equal statistical power. For example, in Ontario a survey taken
+      throughout the province might use a larger sampling fraction in the less
+      populated north, since the disparity in population between north and south
+      is so great that a sampling fraction based on the provincial sample as a
+      whole might result in the collection of only a handful of data from the
+      north
+    </p>
+    <h4>Disadvantages</h4>
+    <p>
+      Stratified sampling is not useful when the population cannot be
+      exhaustively partitioned into disjoint subgroups. It would be a
+      misapplication of the technique to make subgroups' sample sizes
+      proportional to the amount of data available from the subgroups, rather
+      than scaling sample sizes to subgroup sizes (or to their variances, if
+      known to vary significantly—e.g. using an F Test). Data representing each
+      subgroup are taken to be of equal importance if suspected variation among
+      them warrants stratified sampling. If subgroup variances differ
+      significantly and the data needs to be stratified by variance, it is not
+      possible to simultaneously make each subgroup sample size proportional to
+      subgroup size within the total population. For an efficient way to
+      partition sampling resources among groups that vary in their means,
+      variance and costs, see "optimum allocation". The problem of stratified
+      sampling in the case of unknown class priors (ratio of subpopulations in
+      the entire population) can have a deleterious effect on the performance of
+      any analysis on the dataset, e.g. classification.[3] In that regard,
+      minimax sampling ratio can be used to make the dataset robust with respect
+      to uncertainty in the underlying data generating process.<br /><br />
+
+      Combining sub-strata to ensure adequate numbers can lead to Simpson's
+      paradox, where trends that exist in different groups of data disappear or
+      even reverse when the groups are combined.
+    </p>
     <%-include('partials/footer') %>
-</body>
+  </body>
 </html>
