--- a/src/public/small.css
+++ b/src/public/small.css
@@ -1,57 +1,55 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Shadows+Into+Light&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Shadows+Into+Light&display=swap");
 
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #283618;
-  --secondary-color: #606C38;
-  --accent1-color: #F4F3F7;
-  --accent2-color: #C7BCC1;
+  --secondary-color: #606c38;
+  --accent1-color: #f4f3f7;
+  --accent2-color: #c7bcc1;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: 'Montserrat', sans-serif;
-  --paragraph-font: 'Raleway', sans-serif;
+  --heading-font: "Montserrat", sans-serif;
+  --paragraph-font: "Raleway", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #283618;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #283618; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
+  --headline-color-on-white: #283618; /* headlines on a white background */
+  --headline-color-on-color: white; /* headlines on a colored background */
+  --paragraph-color-on-white: #283618; /* paragraph text on a white background */
+  --paragraph-color-on-color: white; /* paragraph text on a colored background */
   --paragraph-background-color: #283618;
-  --nav-link-color: #C7BCC1;
-  --nav-background-color:  #606C38;
-  --nav-hover-link-color: #E7C24F;
-  --nav-hover-background-color: #C7BCC1;
+  --nav-link-color: #c7bcc1;
+  --nav-background-color: #606c38;
+  --nav-hover-link-color: #e7c24f;
+  --nav-hover-background-color: #c7bcc1;
 }
 
-
 html {
-background-color: var(--paragraph-color-on-color);
+  background-color: var(--paragraph-color-on-color);
 }
 
 body {
-max-width: 940px;
-margin: 0 auto;
-background-color: var(--paragraph-color-on-color);
-padding: 1em;
+  max-width: 940px;
+  margin: 0 auto;
+  background-color: var(--paragraph-color-on-color);
+  padding: 1em;
 }
 
-h1, h2, h3, h4, h5, h6 {
-font-family: var(--heading-font);
-color: var(--paragraph-color-on-white);
+h1,
+h2 {
+  font-family: var(--heading-font);
+  color: var(--paragraph-color-on-white);
 }
 
 p {
-font-family: var(--paragraph-font);
-color: var(--headline-color-on-white);
-
+  font-family: var(--paragraph-font);
+  color: var(--headline-color-on-white);
 }
 
-li{
+li {
   font-family: var(--paragraph-font);
   color: var(--headline-color-on-white);
   text-align: justify;
@@ -62,58 +60,57 @@ li{
 }
 
 header {
-display: grid;
-padding-bottom: 15px;
-background-color: var(--primary-color);
-line-height: 1.4em;
-text-align: center;
-font-size: 2.4vh;
+  display: grid;
+  padding-bottom: 15px;
+  background-color: var(--primary-color);
+  line-height: 1.4em;
+  text-align: center;
+  font-size: 2.4vh;
 }
 
 h1 {
-text-align: center;
-color: var(--paragraph-color-on-color);
-padding-top: 0.5em;
-font-size: 2rem;
+  text-align: center;
+  color: var(--paragraph-color-on-color);
+  padding-top: 0.5em;
+  font-size: 2rem;
 }
 
 h2 {
-text-align: center;
-color:var(--paragraph-color-on-color);
-font-size: 1rem;
+  text-align: center;
+  color: var(--paragraph-color-on-color);
+  font-size: 1rem;
 }
 
-
-main{
+main {
   display: flex;
   flex-direction: column;
 }
 
-.main-title-1{
+.main-title-1 {
   text-align: center;
   padding: 0.5em;
   border: 10px solid var(--paragraph-color-on-color);
   background-color: var(--paragraph-background-color);
 }
 
-.main-title-2{
+.main-title-2 {
   text-align: center;
   padding: 0.5em;
   border: 10px solid var(--nav-link-color);
   background-color: var(--nav-background-color);
 }
 
-.main-title-3{
+.main-title-3 {
   text-align: center;
   padding: 0.5em;
   border: 10px solid var(--accent1-color);
   background-color: var(--nav-background-color);
-    }
+}
 
-h3{
+h3 {
   background-color: var(--paragraph-background-color);
   display: flex;
-  font-size: 1.6em;
+  font-size: 1.4em;
   margin-block-start: 0em;
   margin-block-end: 0em;
   font-weight: bold;
@@ -127,31 +124,43 @@ h4 h5 {
 
 }
 
-h4{
+h4 {
   font-size: 1.5em;
-} 
-
+  text-align: center;
+}
 
 h5 {
   font-size: 1.2em;
 }
 
-img{
-  grid-column: 1/1;
-  grid-row: 9/10;
-  width: 60%;
-  padding-left: 60px;
+img {
+  width: 80%;
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.equation {
+  width: 30%;
 }
 
 p {
   text-align: justify;
   padding-left: 50px;
-  padding-right: 112px;
+  padding-right: 50px;
   line-height: 25px;
   padding-top: 1em;
   padding-bottom: 1em;
+}
+
+ul{
+  text-align: justify;
+  padding-left: 50px;
+  padding-right: 50px;
+  line-height: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-family: var(--paragraph-font);
+  color: var(--headline-color-on-white);
 }
 
 .colors {
@@ -163,7 +172,7 @@ p {
 .colors th {
   background-color: var(--nav-hover-background-color);
 }
-.colors td{
+.colors td {
   width: 25%;
   height: 3em;
 }
@@ -177,7 +186,7 @@ p {
 .accent1 {
   background-color: var(--accent1-color);
 }
-.accent2{
+.accent2 {
   background-color: var(--accent2-color);
 }
 
@@ -187,25 +196,38 @@ p.colored {
 }
 
 footer {
-display: grid;
-max-width: 100%;
-grid-template-columns: 1fr;
-background-color: var(--secondary-color);
-grid-gap: 2em
+  display: grid;
+  max-width: 100%;
+  grid-template-columns: 1fr;
+  background-color: var(--secondary-color);
+  grid-gap: 2em;
+  margin-top: 20px;
 }
 
-.copyright{
-grid-column: 1 / 3;
-grid-row: 1 / 2;
-font-family: var(--heading-font);
-text-align: center;
-font-size: 0.8em;
-padding: 1em;
-width: 96%; 
-color: var(--accent1-color);
+.copyright {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  font-family: var(--heading-font);
+  text-align: center;
+  font-size: 0.8em;
+  padding: 1em;
+  width: 96%;
+  color: var(--accent1-color);
 }
 
 /* table format */
+
+.continer {
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  max-width: 500px;
+  padding: 20px;
+}
 
 input {
   display: inline-block;
@@ -216,6 +238,21 @@ input {
   padding: 5px;
   outline: none;
   font-family: var(--heading-font);
+}
+
+.serie {
+  width: 15%;
+  background-color: #606c38;
+  color: #fff;
+  font-size: 14px;
+  font-family: var(--heading-font);
+  cursor: pointer;
+}
+
+.valor {
+  width: 25%;
+  font-family: var(--heading-font);
+  border: 1px solid #606c38;
 }
 
 .agregar {
@@ -247,131 +284,123 @@ input {
 /* style tables */
 
 @media only screen and (max-width: 595px) {
+  table {
+    border: 1px solid #606c38;
+    background-color: #eeeeee;
+    width: 100%;
+    text-align: center;
+    font-family: var(--heading-font);
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-.table-wrapper {
-  display: grid;
-  place-content: center;
+  table td,
+  table th {
+    border: 1px solid #aaaaaa;
+    padding: 3px 2px;
+  }
+
+  table tbody td {
+    font-size: 9.5px;
+    font-family: var(--heading-font);
+  }
+
+  table thead {
+    background: #606c38;
+    border-bottom: 2px solid #444444;
+  }
+
+  table thead th {
+    font-size: 10px;
+    font-weight: bold;
+    color: #ffffff;
+    border-left: 2px solid #d0e4f5;
+  }
+
+  table thead th:first-child {
+    border-left: none;
+  }
+
+  #hide-me {
+    display: none;
+  }
 }
 
-table {
-  border: 1px solid #606c38;
-  background-color: #EEEEEE; 
-  width: 100%; 
-  text-align: center; 
-  font-family: var(--heading-font);
-  border-collapse: collapse;
-  margin-left: auto;
-  margin-right: auto;
-  
+/* responsive top navigation */
+
+body {
+  max-width: 940px;
+  margin: 0 auto;
+  background-color: var(--accent1-color);
+  padding: 1em;
 }
 
-table td, table th {
-  border: 1px solid #AAAAAA;
-  padding: 3px 2px;
+.material-symbols-outlined {
+  font-family: "Material Symbols Outlined";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 0;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
 }
 
-table tbody td {
-  font-size: 9.5px;
-  font-family: var(--heading-font);
+.topnav {
+  overflow: hidden;
+  background-color: var(--accent2-color);
 }
 
-table thead {
-  background: #606c38; 
-  border-bottom: 2px solid #444444;
+.topnav a {
+  float: left;
+  display: block;
+  color: var(--paragraph-color-on-white);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 3vh;
 }
 
-table thead th {
-  font-size: 10px; 
-  font-weight: bold; 
-  color: #FFFFFF; 
-  border-left: 2px solid #D0E4F5;
+.topnav a:hover {
+  background-color: var(--secondary-color);
+  color: var(--accent1-color);
 }
 
-table thead th:first-child {
-  border-left: none;
+.topnav a.active {
+  background-color: var(--secondary-color);
+  color: var(--accent1-color);
 }
 
-#hide-me{
+.topnav .icon {
   display: none;
 }
 
-
-}
-
-
-
-  /* responsive top navigation */
-
-  body {
-    max-width: 940px;
-    margin: 0 auto;
-    background-color: var(--accent1-color);
-    padding: 1em;
-  }
-  
-  .material-symbols-outlined {
-    font-family: 'Material Symbols Outlined';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 0;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    white-space: nowrap;
-    word-wrap: normal;
-    direction: ltr;
-
-  }
-
-
-  .topnav {
-    overflow: hidden;
-    background-color: var(--accent2-color);
-  }
-  
-  .topnav a {
-    float: left;
-    display: block;
-    color: var(--paragraph-color-on-white);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 3vh;
-  }
-  
-  .topnav a:hover {
-    background-color: var(--secondary-color);
-    color: var(--accent1-color);
-  }
-  
-  .topnav a.active {
-    background-color: var(--secondary-color);
-    color: var(--accent1-color);
-  }
-  
-  .topnav .icon {
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
     display: none;
   }
-  
-  @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
-  
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
   }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
