--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <%-include('partials/navigation') %>
-    <h1>Contact</h1>
+    <h4>Sampling plan obtained</h4>
     <div class="table-wrapper" ></div>
     <table>
         <thead>
